@@ -74,6 +74,8 @@ Committed Code Changes:
     * Dean's [PATCH] make mod_include use ap_cpystrn
     * WIN32: fix proxy caching
     * WIN32: fix CGI scripts called w/o '=' in path info  PR#1591
+    * Doug's [PATCH] add -c and -C switches (take 3)
+    * Paul's WIN32: patch to allow for Doug's -c option
 
 Available Patches:
 
@@ -100,14 +102,6 @@ Available Patches:
     * Dean's [PATCH] yet another slow function
         <Pine.LNX.3.95dg3.980106142612.1054W-100000@twinlark.arctic.org>
 	Status: Dean +1, Jim +1, Martin +1, Paul +1
-
-    * Doug's [PATCH] add -c and -C switches (take 3)
-	<34B81662.996720D1@telebusiness.co.nz>
-	Doug, Randy and Jim were +1 on original -MApache::httpd_conf
-	patch, which was recinded in favor of this patch prompted by
-	ideas from Ben and Dean.  Marc, Ken and Jim were also in favor
-	of this over -M
-	Status: Doug +1, Martin +1, Ben +1, Paul +1
 
     * Brian Havard's [Patch] OS/2 - fix up shut down
 	<199801051625.DAA25173@silk.apana.org.au>
